# implicit-ipm-qp-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: toy_qp.py
src/i2pd/: __init__.py  qp.py  retraction.py  scaling.py
src/i2pd/solvers/: __init__.py  implicit.py
src/i2pd/utils/: __init__.py
src/implicit_ipm_qp/: __init__.py  retraction.py  scaling.py
src/implicit_ipm_qp/benchmarks/: __init__.py  maros_meszaros.py
src/implicit_ipm_qp/solvers/: __init__.py  implicit.py
src/implicit_ipm_qp/utils/: logging.py  seeding.py
tests/: test_implicit_solver.py  test_import.py  test_logging.py  test_maros_meszaros.py  test_qp_object.py  test_residuals.py  test_retraction.py  test_scaling.py  test_seeding.py
