[project]
name = "implicit-ipm-qp-py"
version = "0.1.0"
description = "Python reproduction of Implicit Primal-Dual Interior-Point Methods for Quadratic Programming (Arrizabalaga & Manchester)."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [{ name = "Jaskaran Grover" }]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pre-commit>=3.7",
    "scipy-stubs>=1.13; python_version >= '3.10'",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/implicit_ipm_qp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: requires a GPU/accelerator",
    "integration: end-to-end / cross-module tests",
    "benchmark: performance/timing tests, not run by default",
]